feature/CHPBUG-7: partially tested filter